# UsagePilot

./: CHANGELOG.md  CONTRIBUTING.md  FUNDING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  icon-generator.html  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto-release.yml  changelog.yml  ci.yml  manual-release.yml  release.yml
docs/: INSTALLATION.md  RELEASE.md
public/: manifest.json
scripts/: generate-keys.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  tracker.rs
src/components/: Layout.tsx
src/components/charts/: DailyUsageChart.tsx
src/pages/: Apps.tsx  Dashboard.tsx  Settings.tsx
src/store/: useAppStore.ts
